traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:4: error: forward reference extends over definition of variable diag
  diag+=1
  ^